<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, main!</string>
    <string name="app_name">RunnersHighEnhanced</string>
	<string name="score">tah score</string>
	<string name="hs_title">High-Score</string>
	<string name="hs_error_name_empty">Name is empty !</string>
	<string name="hs_error_no_internet">Please establish an internet connection !</string>
	<string name="hs_bttn_getonline">Show online highscore</string>
	<string name="hs_bttn_getlocal">Show local highscore</string>
	<string name="hs_bttn_pushOnline">Push Online</string>
	<string name="hs_pushed_online">Score saved online !</string>
	<string name="hs_already_pushed">Score is already online !</string>
	<string name="visit_website">Visit our website</string>
	<string name="hs_loading_local">loading local highscore&#8230;</string>
	<string name="hs_loading_online">loading online highscore&#8230;</string>
	<string name="hs_no_data">no data available</string>
	<string name="info">RunnersHighEnhanced is an 2016 updated version of the game that was created in 2010 by MultiMediaTechnology and MultiMediaArts students at Salzburg University of Applied Sciences.\n\n- Programming:\nMichael Webersdorfer\nChristian Winkler\nAndre Schweighofer\nFrancois Weber\n\n- Graphics:\nManuel Lehermayr\n\n- Sound:\nAndreas Nagl \n\nVersion 1.0</string>
	<string name="saveYourHighScore">Save your Highscore</string>
	<string name="yourScoreWas">Your score was&#8230;</string>
	<string name="twentythreeohone">2301</string>
	<string name="enterYourName">Enter your name:</string>
	<string name="saveMyScoreOnlineAsWell">Save my score online as well</string>
	<string name="save">Save</string>
	<string name="isOnline">is online</string>
	<string name="signOut">Sign Out</string>
	<string name="signin_other_error">There was an issue with sign in, please try again later</string>
	<string name="achievements_button_text">Achievements</string>
	<string name="leaderboard_button_text">Leaderboards</string>
	<string name="saved_games_button_text">Saved Games</string>
	<string name="quests_button_text">Quests</string>
	<string name="pause_button_text">Pause</string>
	<string name="exit_button_text">Quit</string>
</resources>