<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">	
	<!--
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="10dp" 
	
	>
-->
	<TextView  
		android:id="@+id/titleSaveScore"
	  	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"    
	    android:text="@string/saveYourHighScore"
	    android:textSize="26sp"
	    android:textColor="#92C36F"
	    />
	    
	 <TextView  
	 	android:layout_marginTop="15dp" 
		android:id="@+id/labelScore"
	  	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"    
	    android:text="@string/yourScoreWas"
	    android:textSize="20sp"
	    android:textColor="#876842"
	    />				
		
	<TextView
		android:id="@+id/score" 
	  	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/twentythreeohone"
		android:textColor="#39583E" 
		android:textStyle="bold"/>

	<TextView  
		android:layout_marginTop="15dp" 
		android:id="@+id/labelName"
	  	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"    
	    android:text="@string/enterYourName"
	    android:textSize="20sp"
	    android:textColor="#876842"
	    />
				
	<EditText android:id="@+id/title" 
	  	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="textPersonName"
		/>
		
	<CheckBox android:id="@+id/postOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveMyScoreOnlineAsWell"
        android:textColor="#876842" />
	
	<Button android:id="@+id/confirm"
		android:layout_marginTop="15dp" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:text="@string/save"
		/>
</LinearLayout>
<!--
</LinearLayout>
-->