<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/menu_background">

	<LinearLayout android:id="@+id/linearLayout2"
		android:orientation="vertical"
		android:layout_width="fill_parent"
        android:layout_height="fill_parent"
		android:layout_weight="2"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginStart="10dp">

		<View
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="2"
			android:scaleType="fitCenter" />

		<Button android:id="@+id/startButton"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="3"
			android:onClick="playGame"
			android:background="@drawable/menu_button_play_game"
			android:layout_margin="5dp"/>

		<Button
			android:id="@+id/highscoreButton"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="3"
			android:background="@drawable/menu_button_highscore"
			android:onClick="showScore"
			android:layout_margin="5dp"/>	
		
		<Button
			android:id="@+id/infoButton"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="3"
			android:background="@drawable/menu_button_information"
			android:onClick="showInfo"
			android:layout_margin="5dp"/>

	</LinearLayout>

	<LinearLayout
	    android:id="@+id/linearLayout3"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:gravity="end"
	    android:orientation="vertical" >

		<!-- sign-in button -->
		<com.google.android.gms.common.SignInButton
			android:id="@+id/sign_in_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<!-- sign-out button -->
		<Button
			android:id="@+id/sign_out_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/signOut"
			android:visibility="gone" />

		<!-- achievement button -->
		<Button
			android:id="@+id/achievements_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/achievements_button_text"
			android:visibility="gone"/>

		<!-- leaderboard button -->
		<Button
			android:id="@+id/leaderboards_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/leaderboard_button_text"
			android:visibility="gone"/>

		<!-- Saved games Button -->
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/saved_games_button"
			android:text="@string/saved_games_button_text"
			android:visibility="gone"/>

		<!-- Quests Button -->
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/quests_button"
			android:text="@string/quests_button_text"
			android:visibility="gone"/>

	</LinearLayout>
	
</LinearLayout>
